# WebRTC-P2P

./: .gitignore  BUGFIX_CAMERA_RELEASE.md  CMakeLists.txt  MY_TURN_SERVER_CONFIG.md  PROJECT_GUIDE.md  QT_MIGRATION.md  QUICK_REFERENCE.md  README.md  TEST_CAMERA_RELEASE.md  TURN_INTEGRATION_COMPLETE.md  TURN_SERVER_GUIDE.md  TURN_SUPPORT_README.md  TURN_TESTING_GUIDE.md  capturer_track_source.cc  capturer_track_source.h  conductor.cc  conductor.h  main.cc  main_wnd.h  test_impl.cc
NetherLink-server/: ARCHITECTURE_DESIGN.md  HOTFIX_WEBRTC_404.md  IMPLEMENTATION_SUMMARY.md  MESSAGE_FLOW_DIAGRAM.md  OFFLINE_MESSAGE_API.md  PROJECT_STRUCTURE.md  README.md  WEBRTC_CLIENT_LIST_FIX.md  WEBRTC_RECONNECT_FIX.md  WEBSOCKET_API.md  docker-compose.yml  go.mod  go.sum  main.go
NetherLink-server/config/: config.go  config.yaml
NetherLink-server/internal/middleware/: auth.go
NetherLink-server/internal/server/: ai_handler.go  contact_handler.go  http.go  message_handler.go  post_handler.go  user_handler.go  webrtc_signaling.go  websocket.go
NetherLink-server/internal/service/: message_dispatch.go  message_persistence.go  push_service.go
NetherLink-server/migrations/: 001_add_message_queue_tables.sql
NetherLink-server/pkg/cache/: redis.go
NetherLink-server/pkg/mq/: rabbitmq.go
NetherLink-server/pkg/utils/: email.go  file.go
include/: call_coordinator.h  callmanager.h  conductor.h  defaults.h  icall_observer.h  mainwindow.h  signalclient.h  video_call_window.h  videorenderer.h  webrtcengine.h
src/: call_coordinator.cc  callmanager.cc  conductor.cc  defaults.cc  main.cc  mainwindow.cc  peer_connection_client.cc  signalclient.cc  video_call_window.cc  videorenderer.cc  webrtcengine.cc
webrtc-http/: go.mod  main.go
webrtc-http/static/js/: signaling-manager.js
